<resources>
    <string name="app_name">Cooking app</string>
    <string name="home">Inspriations</string>
    <string name="myrecipes">My recipes</string>
    <string name="cooknow">Cook now!</string>
    <string name="settings">Settings</string>
    <string name="my_recipes">My recipes</string>
    <string name="textview">TextView</string>

    <string name="cooking_time">Cooking time!</string>
    <string name="cook_now_text">Chop pumpkin and sweet potato into small chunks, put them to the bowl.

Then add water and paprika. Select program no. 3 and cook for 20 mins.</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cooksy">Cooksy</string>
    <string name="roasted_pumpkin_soup">Roasted Pumpkin Soup</string>
    <string name="_50_min">50 min</string>
    <string name="ren_redzepi_nrecommends_you">René Redzepi\nrecommends you</string>
    <string name="vegan_thai_curry_soup">Vegan Thai Curry Soup</string>
    <string name="todo">TODO</string>
    <string name="recipes_nof_the_day">Recipes\nof the day</string>
    <string name="ren_redzepi_n_recommends_you">René Redzepi \nrecommends you</string>
    <string name="sub_text_recommend">Spice lovers will slurp up this soup in seconds.Featuring chili powder, smoked paprika, and cayenne pepper, every bowl brings the heat.</string>
    <string name="browse_more_recieps">Browse more recieps</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="login_text">Login</string>
    <string name="sign_up_text">Sign-up</string>
    <string name="would_you_like_to_cook">Would you like to cook?</string>
    <string name="over_popular_receips">Over popular receips</string>
    <string name="categories">Categories</string>
    <string name="let_s_start">Let\'s start</string>
    <string name="cooking_on_thermomix_made_easy">Cooking on Thermomix made easy</string>
    <string name="all_the_recipes_n_on_your_fingertips">All the recipes \n on your fingertips</string>
    <string name="instructions">- Instructions:</string>
    <string name="exit" />
    <string name="exi">exit</string>
    <string name="favourite_recipes">Favourite recipes</string>
    <string name="favourite">favourite</string>
    <string name="the_right_address_for_cookind_anyday">The Right Address For Cookind Anyday</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="let_s_register">Let\'s Register</string>
    <string name="email">Email</string>
    <string name="search">Search</string>
    <string name="seach_receips">Seach Receips..</string>
    <string name="category_italian">Category:Italian</string>
    <string name="Favourite">Favourite</string>
</resources>