<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/inspirationFragment"
        android:enabled="true"
        android:icon="@drawable/bottombar_inspriations"
        android:title="@string/inspriations"/>
    <item
        android:id="@+id/recipesFragment"
        android:enabled="true"
        android:icon="@drawable/bottombar_myrecipes"
        android:title="@string/myrecipes"/>
    <item
        android:id="@+id/cooknow"
        android:enabled="true"
        android:icon="@drawable/bottombar_cooknow"
        android:title="@string/cooknow"/>
    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/bottombar_settings"
        android:title="@string/settings"/>
</menu>