<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/linear_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_label_ins"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="@font/work_sans"
                android:text="@string/cooksy"
                android:textColor="?attr/colorPrimary"
                android:textSize="34sp"
                android:letterSpacing="0.1"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/image_search_ins"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_search"
                android:contentDescription="TODO" />
        </LinearLayout>

        <TextView
            android:id="@+id/would_you_like_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/work_sans"
            android:text="@string/would_you_like_to_cook"
            android:textColor="?attr/colorOnSurface"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/linear_header"
            app:layout_constraintTop_toBottomOf="@id/linear_header" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/random_card_receips"
            android:layout_width="match_parent"
            android:layout_height="200dp"

            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            app:cardCornerRadius="15dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/would_you_like_text">


            <ImageView
                android:id="@+id/img_random_receip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/purple"
                android:scaleType="centerCrop" />

        </com.google.android.material.card.MaterialCardView>



        <TextView
            android:id="@+id/categories_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/work_sans"
            android:text="@string/categories"
            android:textColor="?attr/colorOnSurface"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/would_you_like_text"
            app:layout_constraintTop_toBottomOf="@id/random_card_receips" />

        <com.google.android.material.card.MaterialCardView
            style="@style/Theme.App"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="15dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categories_text">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none" />
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>



